@@ -5,6 +5,7 @@
 * Better specs
 * New delivery report class
 * Sub-classed message class for supporting VCARD and other formats later
+* Basic support for pulling sent messages and replies
 
 == 0.0.1 2008-09-25
 
